apps/prod/rbx-eden-system-creator/middleware-https.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rbx-eden-system-creator-redirect-https
  namespace: rbx-eden-system-creator
spec:
  redirectScheme:
    scheme: https
    permanent: true
