apps/prod/rbx-eden-system-creator/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-eden-system-creator
  labels:
    environment: production
