apps/prod/rbx-eden-system-creator/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-eden-system-creator
  namespace: rbx-eden-system-creator
  labels:
    app.kubernetes.io/name: rbx-eden-system-creator
spec:
  selector:
    app.kubernetes.io/name: rbx-eden-system-creator
  ports:
    - port: 80
      targetPort: http
      name: http
